Fix misaligned profiler node text

--- a/src/view/components/profiler/flamegraph/FlameGraph.css
+++ b/src/view/components/profiler/flamegraph/FlameGraph.css
@@ -3,6 +3,7 @@
 	max-width: 100%;
 	height: 100%;
 	position: relative;
+	overflow-x: hidden;
 }
 
 .node {
@@ -12,13 +13,18 @@
 	font-size: 0.8rem;
 	padding: 0 0.2rem;
 	height: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 	transition-property: all;
 	transition-duration: 0.3s;
 	padding-bottom: 1px;
 	border-left: 1px solid var(--color-bg);
+	display: flex;
+	align-items: center;
+}
+
+.text {
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .node::after {
